--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 			<img src="img1.jpg">
 			<nav id="items">
 				<ul>
-					<li><a href="item1.html">機票</a></li>
-					<li><a href="item2.html">訂房</li>
-					<li><a href="item3.html">團體</li>
-					<li><a href="item4.html">自由行</li>
+					<li><a href="#">機票</a></li>
+					<li><a href="#">訂房</li>
+					<li><a href="#">團體</li>
+					<li><a href="#">自由行</li>
 				</ul>
 			</nav>
 		</header>
@@ -30,11 +30,11 @@
 			<h3>主題旅遊</h3>
 			<nav id="travels">
 				<ul>
-					<li><a href="travel1.html">東京迪士尼</a></li>
-					<li><a href="travel2.html">九州豪斯登堡</li>
-					<li><a href="travel3.html">立山雪牆</li>
-					<li><a href="travel4.html">北海道函館夜景</li>
-					<li><a href="travel5.html">沖繩五星之旅</li>
+					<li><a href="#">東京迪士尼</a></li>
+					<li><a href="#">九州豪斯登堡</li>
+					<li><a href="#">立山雪牆</li>
+					<li><a href="#">北海道函館夜景</li>
+					<li><a href="#">沖繩五星之旅</li>
 				</ul>
 			</nav>
 		</aside>
